--- a/Frontend/frontend_coach.html
+++ b/Frontend/frontend_coach.html
@@ -1,25 +1,48 @@
 <html>
-    <head><title>Coach Scherm</title></head>
+    <head>
+        <title>Coach Scherm</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    </head>
     <script>
         function geefFeedback(){
             var ID       = document.getElementById("ID").value;
             var feedback = document.getElementById("Feedback").value;
-            var oefening = document.getElementById("oefening").value;
 
-            var voortgangObject = {};
-            voortgangObject.oefening = oefening;
-            voortgangObject.id=ID;
+            var voortgangObject      = {};
+            voortgangObject.id       = ID;
             voortgangObject.feedback = feedback;
-            var objJSON = JSON.stringify(voortgangObject);
+            var objJSON              = JSON.stringify(voortgangObject);
             var xhr = new XMLHttpRequest();
             xhr.onreadystatechange = function(){
                 if(this.readyState == 4) {
-					alert(voortgangObject.feedback + " is opgeslagen");
+					document.getElementById("checkVerstuur").innerHTML = feedback+" toegevoegd!";
+                    showVoortgang();
 				}
             };
             xhr.open("POST","http://localhost:8082/geefFeedback",true);
             xhr.setRequestHeader("Content-Type", "application/json");
 			xhr.send(objJSON);
+        }
+        function checkID(){
+            var ID  = document.getElementById("ID").value;
+            var xhr = new XMLHttpRequest();
+            xhr.onreadystatechange = function(ID) {
+                if (this.readyState == 4){
+                    var rijtje = JSON.parse(this.responseText);
+					console.log(rijtje);
+                    var eindtekst = "<table><tr><td>ID</td><td>Oefening</td><td>Tijdsduur</td><td>Aantal reps</td><td>Gegeven feedback</td><td></tr>";
+					eindtekst += "<tr><td>" + rijtje.id + 
+                                 "</td><td>" + rijtje.oefening + 
+                                 "</td><td>" + rijtje.oefeningtijd + 
+								 "</td><td>" + rijtje.liftaantal + 
+                                 "</td><td>"+ rijtje.feedback +"</td></tr>";  
+					eindtekst += "</table>";
+
+                    document.getElementById("CheckIDans").innerHTML = eindtekst;
+                }
+            };
+            xhr.open("GET","http://localhost:8082/checkID?id="+ID,true);
+            xhr.send();
         }
         function showVoortgang(){
             var xhr = new XMLHttpRequest();
@@ -45,11 +68,12 @@
     </script>
     <body>
         Geef feedback aan de student.<br>
-        Oefening ID: <input type="text" id="ID"><br>
-        Oefening naam: <input type="text" id="oefening"><br>
+        Oefening ID: <input type="text" id="ID"><input type="button" value="Check ID" onclick="checkID()">
+        <div id="CheckIDans"></div><br>
         Feedback: <input type="text" id="Feedback"><br>
         <input type="button" value="Verstuur" onclick="geefFeedback()">
-        <input type="button" value="Laat voortgang zien" onclick="showVoortgang()"><br>
+        <input type="button" value="Laat voortgang zien" onclick="showVoortgang()">
+        <div id="checkVerstuur"></div><br>
         <div id="voortgangDiv"></div>
     </body>
 
