--- a/Frontend/frontend_voortgang.html
+++ b/Frontend/frontend_voortgang.html
@@ -11,7 +11,6 @@
             var starttijd = document.getElementById("ipstarttijd").value;
             
 			var voortgangObject = {};
-			voortgangObject.oefening = oefening;
 			voortgangObject.oefeningtijd = oefeningtijd;
             voortgangObject.liftaantal = liftaantal;
             voortgangObject.gebruiktegewicht = gewicht;
@@ -21,11 +20,12 @@
             console.log(objJSON);
 			var xhr = new XMLHttpRequest();
 			xhr.onreadystatechange = function() {
+                
 				if(this.readyState == 4) {
 					alert(voortgangObject.oefening + " is opgeslagen");
 				}
 			};
-			xhr.open("POST", "http://localhost:8082/vulVoortgang", true);
+			xhr.open("POST", "http://localhost:8082/vulVoortgang" + "/" + oefening, true);
 			xhr.setRequestHeader("Content-Type", "application/json");
 			xhr.send(objJSON);
 
@@ -37,6 +37,19 @@
         function openVragenlijst() {
             var xhr = new XMLHttpRequest();
 			xhr.onreadystatechange = function(){
+                if(this.readyState == 4)
+                {
+                    var vragen = JSON.parse(this.responseText);
+                    console.log(vragen);
+                    var allevragen = "";
+                    vragen.forEach(element => {
+                    allevragen += element + "<br>";
+                    })
+                }
+                document.getElementById("vragenlijstinvullen").innerHTML = allevragen;
+            }
+            xhr.open("GET","http://localhost:8082/vulVragenlijst",true);
+            xhr.send();
         }
     </script>
 
