--- a/Frontend/frontend_leegOefeningen.html
+++ b/Frontend/frontend_leegOefeningen.html
@@ -24,6 +24,7 @@
     </script>
 
     <body>
+        Dit ding is maar tijdelijk.<br>
         <input type="button" value="leeg de oefeningen" onclick="leegDeOefeningen()">
         <input type="button" value="vul de oefeningen" onclick="vulDeOefeningen()"
     </body>
