--- a/Frontend/Frontend.html
+++ b/Frontend/Frontend.html
@@ -7,6 +7,9 @@
 </head>
 
 <script>
+	//Globale variabelen
+	var inlogID;
+	//functions
 	function toonAlleOefeningen() {
 		var xhr = new XMLHttpRequest();
 		xhr.onreadystatechange = function () {
@@ -61,7 +64,8 @@
 					+ "<th scope =\"col\">Starttijd</th>"
 					+ "<th scope = \"col\">Tijdsduur</th>"
 					+ "<th scope = \"col\">Aantal reps</th>"
-					+ "<th scope = \"col\">Gegeven feedback</th></tr></thead><tbody>";
+					+ "<th scope = \"col\">Gegeven feedback</th>" 
+					+ "<th scope = \"col\">Gevoel</tr></thead><tbody>";
 				for (var x = 0; x < rijtjeVoortgang.length; x++) {
 					eindtekst += "<tr><td>" + rijtjeVoortgang[x].id +
 						"</td><td>" + rijtjeVoortgang[x].oefening.naam +
@@ -69,7 +73,8 @@
 						"</td><td>" + rijtjeVoortgang[x].starttijd +
 						"</td><td>" + rijtjeVoortgang[x].oefeningtijd +
 						"</td><td>" + rijtjeVoortgang[x].liftaantal +
-						"</td><td>" + rijtjeVoortgang[x].feedback + "</td></tr>";
+						"</td><td>" + rijtjeVoortgang[x].feedback + 
+						"</td><td>" + rijtjeVoortgang[x].antwoorden + "</td></tr>";
 						console.log(rijtjeVoortgang[x].oefening);
 				}
 				eindtekst += "</tbody></table>";
@@ -160,6 +165,7 @@
 						document.getElementById("scherm").hidden = false;
 						document.getElementById("registreerdeSporter").hidden = false;
 						document.getElementById("scherm").innerHTML = "<p>Welkom, </p>" + naam;
+						window.inlogID = element.id;
 					}
 				});
 				if (!inLijst) {
@@ -191,10 +197,9 @@
 
 
 	function oefeningRegistreren() {
-		document.getElementById("planningScherm").hidden = true
+		document.getElementById("planningScherm").hidden = true;
 		document.getElementById("oefening invullen").hidden = false;
 		document.getElementById("scherm").hidden = true;
-
 	}
 
 	function verwijderModus() {
@@ -229,9 +234,8 @@
 		voortgangObject.liftaantal = liftaantal;
 		voortgangObject.gebruiktegewicht = gewicht;
 		voortgangObject.starttijd = starttijd;
-
 		var objJSON = JSON.stringify(voortgangObject);
-		console.log(objJSON);
+
 		var xhr = new XMLHttpRequest();
 		xhr.onreadystatechange = function () {
 
@@ -254,7 +258,6 @@
 		xhr.onreadystatechange = function () {
 			if (this.readyState == 4) {
 				var vraag = JSON.parse(this.responseText);
-				console.log(vraag);
 				document.getElementById("vraag").innerHTML = vraag.vragen;
 				// var allevragen = "";
 				// vragen.forEach(element => {
@@ -267,10 +270,20 @@
 		xhr.send();
 	}
 
-	function slaAntwoordOp(i) {
+	function slaAntwoordOp() {
+		document.getElementById("scherm").innerHTML = "";
 		var xhr = new XMLHttpRequest();
+		var idVoortgang = document.getElementById("voortgangID").value;
 		var vragenlijsten = {};
-
+		if(document.getElementById("antwoord-goed").checked){
+			vragenlijsten.antwoorden="goed";
+		}else if(document.getElementById("antwoord-matig").checked){
+			vragenlijsten.antwoorden="matig";
+		}else{
+			vragenlijsten.antwoorden="slecht";
+		}
+		
+		/*
 		if (i == 0) {
 			vragenlijsten.antwoorden = "goed";
 		}
@@ -279,19 +292,37 @@
 		}
 		else {
 			vragenlijsten.antwoorden = "slecht";
-		}
+		}*/
 		var objJSON = JSON.stringify(vragenlijsten);
-
+		window.gevoel = vragenlijsten.antwoorden;
 		xhr.onreadystatechange = function () {
 			if (this.readyState == 4) {
-
+				console.log(objJSON);
 			}
 		};
-		xhr.open("POST", "http://localhost:8082/save/antwoord", true);
+		xhr.open("POST", "http://localhost:8082/save/antwoord/"+window.inlogID, true);
 		xhr.setRequestHeader("Content-Type", "application/json");
 		xhr.send(objJSON);
 		document.getElementById("oefening invullen").hidden = false;
 		document.getElementById("vragenlijstinvullen").hidden = true;
+		antwoordVoortgang(idVoortgang);
+	}
+	function antwoordVoortgang(id){
+		var voortgangObject = {};
+		voortgangObject.id = id;
+		voortgangObject.antwoord = window.gevoel;
+		var objJSON = JSON.stringify(voortgangObject);
+		xhr = new XMLHttpRequest();
+		xhr.onreadystatechange = function(){};
+		xhr.open("POST","http://localhost:8082/voortgangAntwoord");
+		xhr.setRequestHeader("Content-Type","application/json");
+		xhr.send(objJSON);
+	}
+	function editGevoel(){
+		document.getElementById("oefening invullen").hidden = true;
+		document.getElementById("vragenlijstinvullen").hidden = false;
+		document.getElementById("scherm").hidden = true;
+		openVragenlijst();
 	}
 
 	function verkrijgAlleVragenlijsten() {
@@ -390,8 +421,9 @@
 					<small class="form-text text-muted">Vul ID in voor verwijdering</small>
 				</div>
 				<input type=button value="Voeg toe" onclick="slaOefeningOp()">
-				<input type=button value=ZieOefeningen onclick="toonVoortgang()">
-				<input type=button value=verwijderOefening onclick="verwijderOefening()">
+				<input type=button value="Bekijk oefeningen" onclick="toonVoortgang()">
+				<input type=button value="Verwijder oefening" onclick="verwijderOefening()">
+				<input type=button value="Verander gevoellijst" onclick="editGevoel()">
 			</form>
 		</div>
 		<div id="vragenlijstinvullen" hidden>
@@ -401,9 +433,15 @@
 			<div id="vraag">Hier komt de vraag!</div>
 			<br>
 			<br>
-			<input type=button value="goed" onclick="slaAntwoordOp(0)">
-			<input type=button value="matig" onclick="slaAntwoordOp(1)">
-			<input type=button value="slecht" onclick="slaAntwoordOp(2)">
+			<div id="uitleg id">Geef het ID op van de training waar je antwoord op wil geven.</div><br><br>
+			<input type=text id="voortgangID"><input type=button value="Laat hele voortgangtabel zien" onclick="toonVoortgang()"><br><br>
+			<input type="radio" id="antwoord-goed" name="antwoord" value="goed">
+  			<label for="goed">Goed</label><br>
+  			<input type="radio" id="antwoord-matig" name="antwoord" value="matig">
+  			<label for="matig">Matig</label><br>
+  			<input type="radio" id="antwoord-slecht" name="antwoord" value="slecht">
+			<label for="slecht">Slecht</label><br>
+			<input type=button id="verstuurAntwoord" value="Verstuur antwoord" onclick="slaAntwoordOp()">
 			<b></b>
 			<input type=button value="voeg toe" onclick="verkrijgAlleVragenlijsten()">
 			<div id=output></div>
