--- a/Frontend/frontend_coach.html
+++ b/Frontend/frontend_coach.html
@@ -15,6 +15,7 @@
             var xhr = new XMLHttpRequest();
             xhr.onreadystatechange = function(){
                 if(this.readyState == 4) {
+                    console.log(objJSON);
 					document.getElementById("checkVerstuur").innerHTML = feedback+" toegevoegd!";
                     showVoortgang();
 				}
