--- a/Frontend/frontend_startSchermSporter.html
+++ b/Frontend/frontend_startSchermSporter.html
@@ -6,6 +6,8 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <script>
+	var inlogID = new URL(window.location.href).searchParams.get("inlogID");
+	alert(inlogID);
     function veranderIets(){
         document.getElementById("displayScherm").innerHTML = "<p>iets</p>";
     }
@@ -99,10 +101,20 @@
 		xhr.send();
 	}
 
-	function slaAntwoordOp(i) {
+	function slaAntwoordOp() {
+		document.getElementById("scherm").innerHTML = "";
 		var xhr = new XMLHttpRequest();
+		var idVoortgang = document.getElementById("voortgangID").value;
 		var vragenlijsten = {};
-
+		if(document.getElementById("antwoord-goed").checked){
+			vragenlijsten.antwoorden="goed";
+		}else if(document.getElementById("antwoord-matig").checked){
+			vragenlijsten.antwoorden="matig";
+		}else{
+			vragenlijsten.antwoorden="slecht";
+		}
+		
+		/*
 		if (i == 0) {
 			vragenlijsten.antwoorden = "goed";
 		}
@@ -111,20 +123,20 @@
 		}
 		else {
 			vragenlijsten.antwoorden = "slecht";
-		}
+		}*/
 		var objJSON = JSON.stringify(vragenlijsten);
-
+		window.gevoel = vragenlijsten.antwoorden;
 		xhr.onreadystatechange = function () {
 			if (this.readyState == 4) {
-
+				console.log(objJSON);
 			}
 		};
-		//NOG VERANDEREN --> HARDCODE 1
-		xhr.open("POST", "http://localhost:8082/save/antwoord/1", true);
+		xhr.open("POST", "http://localhost:8082/save/antwoord/"+window.inlogID, true);
 		xhr.setRequestHeader("Content-Type", "application/json");
 		xhr.send(objJSON);
-		document.getElementById("displayScherm").innerHTML = document.getElementById("oefeningRegistratieScherm").innerHTML;
-		
+		document.getElementById("oefening invullen").hidden = false;
+		document.getElementById("vragenlijstinvullen").hidden = true;
+		antwoordVoortgang(idVoortgang);
 	}
 	function toonVoortgang() {
 		var xhr = new XMLHttpRequest();
