--- a/Frontend/frontend_planningSporter.html
+++ b/Frontend/frontend_planningSporter.html
@@ -2,91 +2,49 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-		integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
+
+<script>
+    function toonPlanning() {
+        document.getElementById("scherm").hidden = true;
+        var xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function () {
+            if (this.readyState == 4) {
+                var rijtjePlanning = JSON.parse(this.responseText);
+                console.log(rijtjePlanning);
+                var eindtekst = "<table class =\"table\">"
+                    + "<thead class =\"thead-dark\"><tr>"
+                    + "<th scope =\"col\">Tijd</th>"
+                    + "<th scope = \"col\">Oefening</th>"
+                    + "<th scope = \"col\">Aantal Reps </th>"
+                    + "<th scope = \"col\">Gewicht</th></tr></thead><tbody>";
+                for (var x = 0; x < rijtjePlanning.length; x++) {
+                    for (var y = 0; y < rijtjePlanning[x].training.length; y++) {
+                        if (rijtjePlanning[x].geregistreerdeSporter != null && rijtjePlanning[x].training[y] != null)
+                            eindtekst += "<tr><td>" + rijtjePlanning[x].id +
+                                "</td><td>" + rijtjePlanning[x].geregistreerdeSporter.naam +
+                                "</td><td>" + rijtjePlanning[x].training[y].oefening.naam +
+                                "</td><td>" + rijtjePlanning[x].training[y].tijd +
+                                "</td><td>" + rijtjePlanning[x].training[y].aantalReps +
+                                "</td><td>" + rijtjePlanning[x].training[y].gewicht + "</td></tr>";
+                    }
+                }
+                eindtekst += "</tbody></table>";
+                document.getElementById("scherm").innerHTML = eindtekst;
+                document.getElementById("scherm").hidden = false;
+            }
+        };
+        xhr.open("GET", "http://localhost:8082/allPlanning", true);
+        xhr.send();
+
+    }
+</script>
+
 <body>
-    <center>
-        <table>
-            <thead>
-                <tr class="month-header">
-                    <th colspan="14">
-                        <h1>Mei 2020</h1>
-                    </th>
-                </tr>
-                <tr class="weekday-header">
-                    <th colspan="2"> Zondag </th>
-                    <th colspan="2"> Maandag </th>
-                    <th colspan="2"> Dinsdag </th>
-                    <th colspan="2"> Woensdag </th>
-                    <th colspan="2"> Donderdag </th>
-                    <th colspan="2"> Vrijdag </th>
-                    <th colspan="2"> Zaterdag </th>
-                </tr>
-            </thead>
-            <tbody>
+    <div id="planningScherm"></div>
 
-                <!-- Week 1 -->
-                <tr class="week">
-                    <td colspan="4" class="off-day" />
-                    <td colspan="2"> 1 </td>
-                    <td colspan="2"> 2 </td>
-                    <td colspan="2"> 3
-                    </td>
-                    <td colspan="2"> 4 </td>
-                    <td colspan="2"> 5
-                    </td>
-                </tr>
-
-                <!-- Week 2 -->
-                <tr class="week">
-                    <td colspan="2"> 6 </td>
-                    <td colspan="2"> 7</td>
-                    <td colspan="2"> 8</td>
-                    <td colspan="2"> 9 </td>
-                    <td colspan="2"> 10 </td>
-                    <td colspan="2"> 11 </td>
-                    <td colspan="2"> 12 </td>
-                </tr>
-
-                <!-- Week 3 -->
-                <tr class="week">
-                    <td colspan="2"> 13 </td>
-                    <td colspan="2"> 14 </td>
-                    <td colspan="2"> 15 </td>
-                    <td colspan="2"> 16 </td>
-                    <td colspan="2"> 17 </td>
-                    <td colspan="2"> 18 </td>
-                    <td colspan="2"> 19 </td>
-                </tr>
-
-                <!-- Week 4 -->
-                <tr class="week">
-                    <td colspan="2"> 20 </td>
-                    <td colspan="2"> 21 </td>
-                    <td colspan="2"> 22 </td>
-                    <td colspan="2"> 23 </td>
-                    <td colspan="2"> 24 </td>
-                    <td colspan="2"> 25 </td>
-                    <td colspan="2"> 26 </td>
-                </tr>
-
-                <!-- Week 5 -->
-                <tr class="week">
-                    <td colspan="2"> 27 </td>
-                    <td colspan="2"> 28 </td>
-                    <td colspan="2"> 29 </td>
-                    <td colspan="2"> 30 </td>
-                    <td colspan="2"> 31
-                        <ul>
-                            <li class="event dog-walk"> 5pm: <i>Hond uilaten</i></li>
-                        </ul>
-                    </td>
-                    <td colspan="4" class="off-day" />
-                </tr>
-            </tbody>
-        </table>
-    </center>
 </body>
 
 </html>
