--- a/Frontend/frontend_startSchermSporter.html
+++ b/Frontend/frontend_startSchermSporter.html
@@ -66,14 +66,12 @@
 		voortgangObject.liftaantal = liftaantal;
 		voortgangObject.gebruiktegewicht = gewicht;
 		voortgangObject.starttijd = starttijd;
-
 		var objJSON = JSON.stringify(voortgangObject);
 		console.log(objJSON);
 		var xhr = new XMLHttpRequest();
 		xhr.onreadystatechange = function () {
-
 			if (this.readyState == 4) {
-				//alert(voortgangObject.oefening + " is opgeslagen");
+				alert(this.responseText);
 			}
 		};
 		xhr.open("POST", "http://localhost:8082/vulVoortgang" + "/" + oefening, true);
